# TairHash

./: .clang-format  .gitignore  CMDDOC-CN.md  CMDDOC.md  CMakeLists.txt  Dockerfile  LICENSE  README-CN.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cmake.yml  docker-image.yml
dep/: dict.c  dict.h  heap-inl.h  list.c  list.h  siphash.c  skiplist.c  skiplist.h  tairhash_skiplist.c  tairhash_skiplist.h  util.c  util.h
src/: CMakeLists.txt  redismodule.h  scan_algorithm.c  scan_algorithm.h  slab.c  slab.h  slab_algorithm.c  slab_algorithm.h  slabapi.c  slabapi.h  sort_algorithm.c  sort_algorithm.h  tairhash.c  tairhash.h  tairhash_skiplist.c  tairhash_skiplist.h
tests/: tairhash.tcl
